# low-level-programming-3

./: README.md
client/: .gitignore  CMakeLists.txt  README.md  ast.c  ast.h  lexer.l  main.c  makefile  network.c  network.h  parser.y  response.xsd  test.aql  test.sql  test2.aql  test3.aql  xml.c  xml.h
client/test/: test_network.c
docs/: .gitignore  main.tex
server/: .gitignore  CMakeLists.txt  README.md  clang-tidy-checks.txt
server/docs/: main.tex
server/src/: CMakeLists.txt  main.c  request.xsd
server/src/backend/: data_type.h
server/src/backend/comparator/: comparator.c  comparator.h  conditions.h
server/src/backend/connection/: ast.c  ast.h  network.c  reqexe.c  reqexe.h  xml.c  xml.h
server/src/backend/connection/query_execute/: exe_utils.c  exe_utils.h  reqexe.c  reqexe.h
server/src/backend/connection/query_execute/queries/: create_query.c  drop_query.c  for_query.c  insert_query.c  queries_include.h
server/src/backend/connection/query_execute/queries/subqueries/: filter.c  for_stmt.c  subqueries_include.h
server/src/backend/connection/query_execute/utils/: constant_value.c  constant_value.h  exe_utils.c  exe_utils.h
server/src/backend/db/: db.c  db.h
server/src/backend/journal/: materializer.c  materializer.h  metatab.c  metatab.h  varchar_mgr.c  varchar_mgr.h
server/src/backend/network/: network.c  network.h
server/src/backend/table/: schema.c  schema.h  table.c  table.h  table_base.c  table_base.h
server/src/backend/utils/: parray.c  parray.h  parray64.c  parray64.h  row_likedlist.c  row_likedlist.h
server/src/core/io/: caching.c  caching.h  file.c  file.h  linked_pages.c  linked_pages.h  pager.c  pager.h
server/src/core/page_pool/: linked_blocks.c  linked_blocks.h  page_pool.c  page_pool.h
server/src/generator/: table-gen.c  table-gen.h
server/src/utils/: hashtable.c  hashtable.h  logger.c  logger.h  roundup.h  utils.c  utils.h
server/tester/: CMakeLists.txt
server/tester/src/: test.h  test_utils.c  test_utils.h
server/tester/tests/: caching.c  file_manager.c  hashtable.c  linked_block.c  linked_pages.c  page_pool.c  pager.c  parray.c  schema.c  table-gen.c  table.c  test_hashtable.c
